--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "lerna": "^3.22.1",
     "nodemon": "^2.0.6"
   },
+  "scripts": {
+    "build": "true"
+  },
   "keywords": [
     "nodemon",
     "lerna",
